<resources>
    <string name="app_name">SpiroDVT</string>

    <!-- Login Screen Strings -->
    <string name="welcome">Welcome to App Name</string>
    <string name="username_prompt">Username</string>
    <string name="password_prompt">Password</string>
    <string name="login_button">Login</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>

    <!-- Create Account Strings -->
    <string name="create_account_title">Create Account</string>
    <string name="new_password_prompt">New password</string>
    <string name="reenter_password_prompt">Re-enter password</string>
    <string name="create_account_button">Create Account</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="account_already_exists_message">A account with this username already exists. Please enter a unique username.</string>

    <!-- Patient list screen strings -->
    <string name="search">Search</string>
    <string name="add_patient">Add Patient</string>
    <string name="delete_patient">Delete Patient</string>
    <string name="message_delete_patient">Are you sure you want to delete patient </string>
    <string name="message_delete_patients">Are you sure you want to delete the selected patient(s)?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_incorrect_username">Incorrect Username</string>
    <string name="message_incorrect_username">The username you entered does not exist. Please try again.</string>
    <string name="title_incorrect_password">Incorrect Password</string>
    <string name="message_incorrect_password">The password you entered does not exist. Please try again.</string>
    <string name="try_again">Try Again</string>
    <string name="invalid_search">No patients match the search. Try Again</string>
    <string name="empty_patient_list">No patients are being monitored</string>


    <!-- Spirometer info screen strings -->
    <string name="default_spinner_prompt">select data window</string>
    <string name="spinner_preamble_show_data_for_past">Show data for the most recent </string>
    <string name="spinner_post_days">day(s) of data</string>
    <string name="one_day_button_text">1 day</string>
    <string name="two_day_button_text">2 days</string>
    <string name="three_day_button_text">3 days</string>
    <string name="week_button_text">week</string>
    <string name="spirometer_graph_title">Spirometry Exercises</string>
    <string name="session_label"><u>Session</u></string>
    <string name="date_label"><u>Date</u></string>
    <string name="time_label"><u>Time</u></string>
    <string name="lung_volume_label"><u>Volume</u></string>
    <string name="completed_ratio_label"><u>Reps</u></string>
    <string name="resistance_on_table"><u>Resistance</u></string>
    <string name="get_session">Get Session</string>
    <string name="no_spirometer_message">There is no Incentive Spirometer for this patient. Add a device by editing the patient information.</string>
    <string name="no_dvt_message">There is no DVT Exerciser for this patient. Add a device by editing the patient information.</string>

    <!-- Patient info screen strings -->
    <string name="label_save">Save</string>
    <string name="label_edit">Edit</string>
    <string name="label_cancel">Cancel</string>
    <string-array name="sex_array">
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>
    <string-array name="resistance_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="title_activity_device_info">DeviceInfoActivity</string>
    <string name="tab_text_1">Spirometer</string>
    <string name="tab_text_2">DVT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient_saved">Patient saved</string>
    <string name="incentive_spirometer">Incentive Spirometer</string>
    <string name="device_id">Device ID:</string>
    <string name="unique_id">unique ID</string>
    <string name="number">number</string>
    <string name="dvt_prevention_device">DVT Prevention Device</string>
    <string name="patient_information">Patient Information</string>
    <string name="patient_id">Patient ID:</string>
    <string name="last_name">Last Name:</string>
    <string name="name">name</string>
    <string name="first_name">First Name:</string>
    <string name="height">Height:</string>
    <string name="ft">\u0020ft</string>
    <string name="in">\u0020in</string>
    <string name="weight">Weight:</string>
    <string name="lbs">\u0020lbs</string>
    <string name="age">Age:</string>
    <string name="years">\u0020years</string>
    <string name="sex">Sex:</string>
    <string name="inhalations_nper_hour">Inhalations\nper hour:</string>
    <string name="lung_volume">Lung volume:</string>
    <string name="ml">\u0020ml</string>
    <string name="repetitions_nper_hour">Repetitions\nper hour:</string>
    <string name="resistance">Resistance:</string>
    <string name="delete_spirometer">Delete Incentive Spirometer</string>
    <string name="message_delete_spirometer">All device data will be permanently deleted. Are you
        sure you want to delete this patient\'s Incentive Spirometer device? </string>
    <string name="spirometer_deleted">Incentive Spirometer</string>
    <string name="delete_dvt">Delete DVT Prevention Device</string>
    <string name="message_delete_dvt">All device data will be permanently deleted. Are you
        sure you want to delete this patient\'s DVT Prevention Device? </string>
    <string name="dvt_deleted">DVT Prevention Device deleted</string>
    <string name="not_unique_id">Nonunique patient ID</string>
    <string name="not_unique_id_message">A patient with this ID already exists. Please enter a unique patient ID.</string>
    <string name="not_unique_device_id">Nonunique device ID</string>
    <string name="not_unique_device_id_message">A device with this ID has already been used by a patient. Please enter a device ID that is unused.</string>
    <string name="connect_spirometer_text">Connect Spirometer</string>
    <string name="connect_dvt_text">Connect DVT</string>
    <string name="scan_for_nearby_devices_text">Scan For Nearby Devices</string>
    <string name="refresh_paired_devices_text">Refresh Paired Devices</string>
    <string name="nearby_devices_text">Nearby Devices</string>
    <string name="bonded_devices_text">Bonded Devices</string>
    <string name="details_text">Details</string>

</resources>
