<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dvtFragBaseLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
    android:id="@+id/getDvtDataButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/get_dvt_session"/>

    <LinearLayout
        android:id="@+id/spirometerInfoSpinnerArea"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_preamble_show_data_for_past"
            android:textSize="16sp"
            />

        <Spinner
            android:id="@+id/dataWindowSpinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:prompt="@string/default_spinner_prompt"
            android:layout_gravity="center|center_horizontal"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/spinner_post_days"
            />

    </LinearLayout>

    <com.github.mikephil.charting.charts.BarChart
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:id="@+id/patient_dvt_graph"
        />

    <GridLayout
        android:id="@+id/column_titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="1"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="end"
            android:text="@string/session_label"
            android:textStyle="bold"
            android:textSize="13sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="3"
            android:gravity="center"
            android:text="@string/time_label"
            android:textStyle="bold"
            android:textSize="13sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/resistance_on_table"
            android:textStyle="bold"
            android:textSize="13sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/completed_ratio_label"
            android:textStyle="bold"
            android:textSize="13sp"/>
    </GridLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/patient_dvt_table"
        android:padding="10dp"
        />


</LinearLayout>