<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateAccountActivity"
    android:columnCount="1"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account_title"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/usernameEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:drawableLeft="@drawable/ic_person_outline_24dp"
        android:hint="@string/username_prompt"
        android:inputType="text"
        android:maxLength="20"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_lock_outline_24dp"
        android:hint="@string/password_prompt"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/reenterPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_lock_outline_24dp"
        android:hint="@string/reenter_password_prompt"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="18sp" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="createAccountButtonOnClick"/>

</GridLayout>